--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/RunButton.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/RunButton.xaml
@@ -5,5 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
              mc:Ignorable="d">
-    <Button x:Name="Button" Click="OnClick" Width="32" Height="32" />
+    <Button Click="OnClick">
+        <Button.Template>
+            <ControlTemplate TargetType="Button">
+                <StackPanel>
+                    <ContentPresenter />
+                </StackPanel>
+            </ControlTemplate>
+        </Button.Template>
+        <Image x:Name="RunIcon" Source="{Binding CurrentImage}"/>
+    </Button>
 </UserControl>
