[WindowsToolbar] Initial implementation finish.

--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/SearchBar.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/SearchBar.xaml
@@ -4,9 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             mc:Ignorable="d">
+    <StackPanel Orientation="Horizontal" Background="White">
+        <TextBox x:Name="SearchBar" Text="{Binding Path=SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="180" Background="Transparent"/>
+        <Image x:Name="SearchIcon" MaxWidth="14" MaxHeight="14" MouseLeftButtonDown="OnIconClicked">
+            <Image.ContextMenu>
+                <ContextMenu />
+            </Image.ContextMenu>
+        </Image>
+    </StackPanel>
 </UserControl>
