--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/IconButton.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/IconButton.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
              mc:Ignorable="d">
-    <Button Click="OnClick">
+    <Button Click="OnClick" FocusVisualStyle="{x:Null}">
         <Button.Template>
             <ControlTemplate TargetType="Button">
                 <StackPanel>
