--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
              mc:Ignorable="d" Background="Transparent">
     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Background="LightGray">
-        <Image MaxWidth="14" Margin="1,1,1,1" MaxHeight="14" Source="{Binding StatusImage}" />
+        <Image x:Name="StatusImageControl" MaxWidth="14" Margin="1,1,1,1" MaxHeight="14" Source="{Binding StatusImage}" />
         <TextBlock
             MinWidth="220"
             MaxWidth="700"
