--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/SearchBar.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/SearchBar.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
              mc:Ignorable="d">
-    <Border BorderBrush="Gray" BorderThickness="1">
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Background="White" Height="24">
-            <TextBox x:Name="SearchBar" Text="{Binding Path=SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" MinWidth="180" Margin="5,0,0,0" Background="Transparent" BorderThickness="0"/>
+    <Border BorderBrush="{Binding BorderBrush}" BorderThickness="1">
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Height="24">
+            <TextBox x:Name="SearchBar" Text="{Binding Path=SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" MinWidth="180" Margin="5,0,0,0" Background="Transparent" Foreground="{Binding Foreground}" BorderThickness="0"/>
             <Image x:Name="SearchIcon" MaxWidth="14" MaxHeight="14" Margin="5,5,5,5" MouseLeftButtonDown="OnIconClicked" >
                 <Image.ContextMenu>
                     <ContextMenu />
