--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/IconButton.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/IconButton.xaml
@@ -5,14 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
              mc:Ignorable="d">
-    <Button Click="OnClick" FocusVisualStyle="{x:Null}">
+    <Button Click="OnClick" FocusVisualStyle="{x:Null}" UseLayoutRounding="True">
         <Button.Template>
             <ControlTemplate TargetType="Button">
-                <StackPanel>
+                <StackPanel UseLayoutRounding="True">
                     <ContentPresenter />
                 </StackPanel>
             </ControlTemplate>
         </Button.Template>
-        <Image x:Name="RunIcon" Source="{Binding CurrentImage}"/>
+        <Image x:Name="RunIcon" Source="{Binding CurrentImage}" UseLayoutRounding="True" />
     </Button>
 </UserControl>
