--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" Background="Transparent">
     <Grid VerticalAlignment="Center" Height="26" Width="350" MinWidth="220" MaxWidth="700" UseLayoutRounding="True">
         <Grid>
-            <ProgressBar Minimum="0" Maximum="1" x:Name="ProgressBar" Loaded="OnProgressBarLoaded" />
+            <ProgressBar Minimum="0" Maximum="1" x:Name="ProgressBar" BorderThickness="0" Foreground="#FFB3E770" />
         </Grid>
         <Grid>
             <Grid.ColumnDefinitions>
