--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/StatusBar.xaml
@@ -16,7 +16,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Image x:Name="StatusImageControl" Grid.Column="0" MaxWidth="14" Margin="5,5,0,5" MaxHeight="14" Source="{Binding StatusImage}" UseLayoutRounding="True" />
+            <Image x:Name="StatusImageControl" Grid.Column="0" MaxWidth="14" Margin="9,5,0,5" MaxHeight="14" Source="{Binding StatusImage}" UseLayoutRounding="True" />
             <TextBlock Grid.Column="1"
                 VerticalAlignment="Center"
                 Padding="7,1,0,2"
@@ -24,7 +24,7 @@
                 Text="{Binding Message}"
                 UseLayoutRounding="True" />
             <StackPanel x:Name="BuildResultPanel" Grid.Column="2" Visibility="{Binding BuildResultPanelVisibility}" VerticalAlignment="Center" Orientation="Horizontal" UseLayoutRounding="True">
-                <Image Source="{Binding BuildResultIcon}" MaxWidth="14" Margin="0,5,5,5" MaxHeight="14" UseLayoutRounding="True" />
+                <Image Source="{Binding BuildResultIcon}" Margin="0,0,0,0" MaxWidth="16" MaxHeight="16" UseLayoutRounding="True" />
                 <TextBlock
             	    Text="{Binding BuildResultCount}" 
 	                VerticalAlignment="Center"
