[Windows] More dynamic styling
(cherry picked from commit 369b267e3186be6633f05460b30a67d6626f235d)

--- a/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/DottedSeparator.xaml
+++ b/main/src/addins/WindowsPlatform/WindowsPlatform/MainToolbar/DottedSeparator.xaml
@@ -4,8 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WindowsPlatform.MainToolbar"
+             xmlns:platform="clr-namespace:WindowsPlatform"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Style>
+        <Style TargetType="{x:Type local:DottedSeparator}">
+        	<Setter Property="Foreground" Value="{Binding Path=(platform:Styles.MainToolbarSeparatorBrush), Mode=OneWay}" />
+		</Style>
+    </UserControl.Style>
     <StackPanel x:Name="DotPanel">
     </StackPanel>
 </UserControl>
